@@ -1,3 +1,5 @@
 add_subdirectory(cmim-1.0)
-add_subdirectory(INCHI-API)
+if(RDK_BUILD_INCHI_SUPPORT)
+  add_subdirectory(INCHI-API)
+endif(RDK_BUILD_INCHI_SUPPORT)
 
