@@ -21,6 +21,8 @@ Bug Fixes:
  - The handling of isotope specifications is more robust.
  - A thread-safety problem in SmilesWrite::GetAtomSmiles() was fixed.
  - some of the MACCS keys definitions have been corrected
+ - Atoms with radical counts > 2 are no longer always written to CTABs
+   with a RAD value of 3.
 
 New Features:
  - The smiles, smarts, and reaction smarts parsers all now take an additional
